Fix header and footer nav bars on small size layout

--- a/css/main.css
+++ b/css/main.css
@@ -493,7 +493,15 @@ input {
 
 @media screen and (max-width: 544px) {
   .logo-container {
-    width: 33%;
+    flex-grow: 1;
+  }
+
+  .nav-links {
+    flex-grow: 0;
+    flex-shrink: 1;
+    width: 77%;
+    display: flex;
+    flex-direction: column;
   }
 
   .nav {
@@ -561,23 +569,20 @@ input {
     width: 100%;
   }
 
-  .nav-links {
-    width: 77%;
-    display: flex;
-    flex-direction: column;
+  footer {
+    height: 225px;
   }
 
   footer nav {
     flex-direction: column;
-  }
-
-  footer .nav-links {
-    width: 100%;
+    height: 100%;
   }
 
   .copyright {
+    display: flex;
+    justify-content: center;
+    flex-grow: 2;
     width: 100%;
-    text-align: center;
     padding: 30px 0;
   }
 }
